stop show divs from overlapping

--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -4,13 +4,7 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
-  flex: 1 0 0;
 }
-// .show-container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-evenly;
-// }
 .expect-offer-wrap {
   display: flex;
   flex-direction: row;
